PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/Branches.pf
module DataStructures{

    x Int = 9

    fun main() : Int {
        if x < 3 {
            print(x)
        } else if x < 6 {
            print(x + 1)
        } else {
            print("large")
        }

        if x == 9 {
            print(" but perfect!")
        }
        return 0
    }
}