PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Function_no_name.pf
module DataStructures{

     fun (Int input):Int{
        return input + 2
    }

    mainFun(){

    }
}